@@ -9,6 +9,10 @@ Version 1.3.2 -- cvs
   - Remove NOOP checks in the POP3 client of mail_fetch to make things more
     compatible and not break things which don't need to be broken.
   - Fix src directory being moved on Windows systems, bugs #586518 #605256 #610676.
+  - This release is compatible with installations that have register_globals set to off.
+  - Do not lose user prefs/sigs/abooks when trying to save to a full disk.
+  - Make the SquirrelMail link on the right top configurable so a provider can point
+    to their own FAQ for example.
 
 Version 1.3.1
 -------------
